--- a/ShoppingWebsiteMvc/Views/Shared/_Layout.cshtml
+++ b/ShoppingWebsiteMvc/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ShoppingWebsiteMvc.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/4cd3844498.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
