--- a/ShoppingWebsiteMvc/Views/StoreItems/Create.cshtml
+++ b/ShoppingWebsiteMvc/Views/StoreItems/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ShoppingWebsiteMvc.Models.StoreItem
+﻿@model ShoppingWebsiteMvc.Models.ViewModels.CreateStoreItemViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -25,6 +25,11 @@
             <div class="form-group">
                 <label asp-for="PriceGBP" class="control-label"></label>
                 <input asp-for="PriceGBP" class="form-control" />
+                <span asp-validation-for="PriceGBP" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" class="form-control" />
                 <span asp-validation-for="PriceGBP" class="text-danger"></span>
             </div>
             <div class="form-group">
